# rclc

./: .gitignore  .travis.yml  CONTRIBUTING.md  Executor-design.md  NOTICE  README.md  codecov.yml  dependencies.repos  todo.txt
.github/workflows/: ci.yml
rclc/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  NOTICE  QUALITY_DECLARATION.md  README.md  VERSIONING.md  package.xml
rclc/include/rclc/: action_client.h  action_goal_handle.h  action_server.h  executor.h  executor_handle.h  init.h  let_executor.h  macros.h  multi_threaded_executor.h  node.h  publisher.h  rcl_foxy.h  rclc.h  single_threaded_executor.h  subscription.h  timer.h  type_support.h  types.h  visibility_control.h
rclc/png/: meta-executor_concept.pptx
rclc/src/: executor.c  executor_handle.c  functions.c  init.c  let_executor.c  node.c  publisher.c  rcl_foxy.c  rcl_wait_set_is_valid_backport.c  rcl_wait_set_is_valid_backport.h  subscription.c  timer.c
rclc/src/rclc/: action_client.c  action_client_internal.h  action_generic_types.h  action_goal_handle.c  action_goal_handle_internal.h  action_server.c  action_server_internal.h  client.c  executor.c  executor_handle.c  init.c  multi_threaded_executor.c  node.c  publisher.c  rcl_wait_set_is_valid_backport.c  rcl_wait_set_is_valid_backport.h  service.c  single_threaded_executor.c  sleep.c  subscription.c  timer.c
rclc/test/: CMakeLists.txt  test_executor.cpp  test_executor_handle.cpp  test_let_executor.cpp  test_node.cpp  test_publisher.cpp  test_subscription.cpp  test_timer.cpp
rclc/test/rclc/: test_action_client.cpp  test_action_server.cpp  test_client.cpp  test_executor.cpp  test_executor_handle.cpp  test_executor_multi_threading.cpp  test_init.cpp  test_node.cpp  test_publisher.cpp  test_service.cpp  test_subscription.cpp  test_timer.cpp
rclc_dispatcher_executor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rclc_dispatcher_executor/include/rclc_dispatcher_executor/: dispatcher_executor.h  visibility_control.h
rclc_dispatcher_executor/src/rclc_dispatcher_executor/: dispatcher_executor.c
rclc_dispatcher_executor/test/rclc_dispatcher_executor/: test_dispatcher_executor.cpp
rclc_dispatching_executor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rclc_dispatching_executor/include/rclc_dispatching_executor/: dispatching_executor.h  visibility_control.h
rclc_dispatching_executor/src/rclc_dispatching_executor/: dispatching_executor.c
rclc_dispatching_executor/test/rclc_dispatching_executor/: test_dispatching_executor.cpp
rclc_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  example_executor.c  example_executor_with_conv.c  package.xml
rclc_examples/src/: example_action_client.c  example_action_server.c  example_client_node.c  example_dispatcher_executor.c  example_executor.c  example_executor_convenience.c  example_executor_only_rcl.c  example_executor_trigger.c  example_let_executor.c  example_let_executor_convenience.c  example_lifecycle_node.c  example_parameter_server.c  example_pingpong.c  example_pingpong.cpp  example_pingpong_helper.c  example_pingpong_helper.h  example_service_node.c  example_short_timer_long_subscription.c  example_sub_context.c  lifecycle_node.c
rclc_lifecycle/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  QUALITY_DECLARATION.md  README.md  package.xml
rclc_lifecycle/include/rclc_lifecycle/: lifecycle.h  rclc_lifecycle.h
rclc_lifecycle/src/rclc_lifecycle/: lifecycle.c  rclc_lifecycle.c
rclc_lifecycle/test/: test_lifecycle.cpp
rclc_lifecycle/test/rclc_lifecycle/: test_lifecycle.cpp
rclc_multi_threaded_executor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rclc_parameter/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  QUALITY_DECLARATION.md  README.md  package.xml
rclc_parameter/include/rclc_parameter/: config.h  config.h.in  parameter.h  parameter_client.h  parameter_server.h  parameter_service.h  rclc_parameter.h  visibility_control.h
rclc_parameter/src/rcl_interfaces/include/: get_parameter_types.h  get_parameters.h  list_parameters.h  list_parameters_result.h  parameter.h  parameter_event.h  parameter_value.h  set_parameters.h  set_parameters_result.h  string_utils.h
rclc_parameter/src/rcl_interfaces/msg/: list_parameters_result__functions.c  list_parameters_result__functions.h  list_parameters_result__struct.h  list_parameters_result__type_support.h  parameter__functions.c  parameter__functions.h  parameter__struct.h  parameter__type_support.h  parameter_event__functions.c  parameter_event__functions.h  parameter_event__struct.h  parameter_event__type_support.h  parameter_value__functions.c  parameter_value__functions.h  parameter_value__struct.h  parameter_value__type_support.h  set_parameters_result__functions.c  set_parameters_result__functions.h  set_parameters_result__struct.h  set_parameters_result__type_support.h
rclc_parameter/src/rcl_interfaces/srv/: get_parameter_types__functions.c  get_parameter_types__functions.h  get_parameter_types__struct.h  get_parameter_types__type_support.h  get_parameters__functions.c  get_parameters__functions.h  get_parameters__struct.h  get_parameters__type_support.h  list_parameters__functions.c  list_parameters__functions.h  list_parameters__struct.h  list_parameters__type_support.h  set_parameters__functions.c  set_parameters__functions.h  set_parameters__struct.h  set_parameters__type_support.h
rclc_parameter/src/rcl_interfaces/string/: string.h  string_functions.c  string_functions.h
rclc_parameter/src/rclc_parameter/: microros_static_memory_manager.h  parameter.c  parameter_client.c  parameter_server.c  parameter_server.h  parameter_service.c  parameter_utils.c  parameter_utils.h
rclc_parameter/test/: test_parameter.cpp
rclc_parameter/test/rclc_parameter/: test_parameter.cpp
test_rclc/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
test_rclc/test/: lifecycle_expected_output.regex  lifecycle_services_test.launch.py.in  lifecycle_services_test_expected_output.regex  lifecycle_test.launch.py.in  service_test.launch.py.in  service_test_expected_output.regex
(+3 files in other folders)
