<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclc</name>
  <version>0.0.0</version>
  <description>The ROS client library in C.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rosidl_generator_c</build_depend>

  <build_export_depend>rcl</build_export_depend>
  <build_export_depend>rmw</build_export_depend>
  <build_export_depend>rosidl_generator_c</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
