<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclc_lifecycle</name>
  <version>2.0.0</version>
  <description>rclc lifecycle convenience methods.</description>
  <maintainer email="jan.staschulat@de.bosch.com">Jan Staschulat</maintainer>

  <license>Apache License 2.0</license>
  
  <author email="arne.nordmann@de.bosch.com">Arne Nordmann</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclc</depend>
  <depend>rcl_lifecycle</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
